--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Ramaguru Radhakrishnan",
   "license": "MIT",
   "dependencies": {
-    // Add any dependencies here, for example:
-    // "axios": "^0.21.1"
+    "axios": "^1.4.0"  // Example dependency
   }
 }
