--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node script.js"
   },
-  "author": "Ramaguru Radhakrishnan",
+  "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.4.0"  // Example dependency
+    "axios": "^1.4.0"
   }
 }
