--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A project to run JavaScript code using GitHub Actions.",
   "main": "script.js",
   "scripts": {
-    "start": "node script.js"
+    "start": "node script.js",
+    "screenshot": "node screenshot.js"
   },
-  "author": "Your Name",
+  "author": "Ramaguru Radhakrishnan",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.4.0"
+    "puppeteer": "^21.3.8"
   }
 }
