--- a/.github/workflows/run-js.yml
+++ b/.github/workflows/run-js.yml
@@ -9,6 +9,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    permissions:  # Add this section to grant write access
+      contents: write
+
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
@@ -22,14 +25,13 @@ jobs:
       run: npm install
 
     - name: Build Site
-      run: echo "Building site..."
+      run: echo "Building site..."  # Add actual build steps if needed
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: './'
-        cname: '<username>.github.io'  # Optional if using a custom domain
+        personal_token: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}  # Use the newly created secret
+        publish_dir: './'  # Ensure this is the directory where index.html is located
 
     - name: Capture Screenshot
       run: npm run screenshot
